# peko-runtime

./: !  .commit_msg.txt  .env.example  .gitignore  AGENTS.md  AGENTS_GAMMA.md  AGENT_CONTAINER_SPEC.md  API.md  API_CONTRACT.md  API_SURFACE.md  ARCHITECTURE_ALIGNMENT_REPORT.md  ARCHITECTURE_INDEX.md  BUILTIN_TOOLS_EXTENSION_MIGRATION_PLAN.md  CAPABILITY_INTERFACE.md  CHANGELOG.md  CHANGES.md  Cargo.toml  DATA_MODEL.md  Dockerfile  GATEWAY_REFACTOR_PLAN.md  GRAND_ARCHITECTURE.md  HEARTBEAT.md  INTERFACE_UNIFICATION_PLAN.md  ISSUES.md  KIMI_STRESS_TEST_REPORT.md  LEGACY_CODE_AUDIT.md  M13_VERIFICATION.md  MIGRATION_ASSESSMENT.md  MIGRATION_CODE_CHANGES.md  MIGRATION_STATELESS_ARCHITECTURE.md  MIGRATION_TO_LLM_MESSAGE_EVENT.md  MILESTONE1_COMMIT.md  MILESTONE1_PLAN.md  MILESTONE_12_IMPLEMENTATION.md  Makefile  PHASE1_CHECKLIST.md  PHASE1_ROADMAP.md  PLAN.md  PORTABLE_AGENT_PLAN.md  README.md  (+40 more)
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  caller.rs  config.rs  host.rs  jwt.rs  lib.rs  ownership.rs  types.rs
crates/chat-log/: Cargo.toml
crates/chat-log/src/: lib.rs  store.rs  types.rs
crates/cron/: Cargo.toml
crates/cron/src/: event_trigger.rs  events.rs  idle.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: agent_view.rs  agentic_loop.rs  async_completion.rs  async_inbox.rs  chunker.rs  compaction_orchestrator.rs  error.rs  event_processor.rs  events.rs  execution.rs  funnel.rs  iteration_state.rs  lib.rs  parallel_gate.rs  provider_view.rs  session_view.rs  stacked_metered_provider.rs  state.rs  stream_buffer.rs  stream_orchestrator.rs  stream_types.rs  synthetic_stream.rs  tool_executor.rs  tool_search_metadata.rs  tool_stream.rs
crates/engine/src/compaction/: backend.rs  eviction.rs  factory.rs  mod.rs  types.rs
crates/engine/src/prompt/: builder.rs  context.rs  memory.rs  mod.rs  placeholder.rs  renderer.rs
crates/extension-api/: Cargo.toml
crates/extension-api/src/: async_inbox.rs  async_status.rs  async_types.rs  hook_io.rs  lib.rs  manifest.rs  reserved_params.rs  session.rs  subagent.rs  tool.rs  types.rs
crates/extension-host/: Cargo.toml
crates/extension-host/src/: inbox.rs  lib.rs  paths.rs  principal_message.rs  registry.rs  skill_catalog.rs  store.rs  subagent.rs  tool_funnel.rs  tool_funnel_impl.rs  transport.rs  types.rs  vault.rs
crates/extension-host/src/async_exec/: mod.rs  steer.rs
crates/extension-host/src/core/: binding.rs  config.rs  context.rs  handler.rs  hook_points.rs  hook_registry.rs  mod.rs  registry.rs  test_sync.rs  tool_registration.rs  tool_registry.rs
crates/extension-host/src/integration/: mod.rs
crates/extension-host/src/manager/: mod.rs  packaging.rs  storage.rs
crates/extension-host/src/protocols/: mod.rs
crates/extension-host/src/scaffold/: engine.rs  mod.rs
crates/extension-host/src/services/: config_service.rs  mod.rs  reserved_params.rs  tool_execution.rs
crates/extension-host/src/transport/: async_router.rs  async_transport.rs
crates/extension-host/src/types/: capabilities.rs  hook_io.rs  manifest.rs  mod.rs  tool.rs
crates/fs-persistence/: Cargo.toml
crates/fs-persistence/src/: durable.rs  file_lock.rs  lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: did.rs  host.rs  keychain.rs  lib.rs  resolver.rs  runtime.rs  runtime_metadata.rs  storage.rs
crates/message/: Cargo.toml
crates/message/src/: lib.rs  session_blocks.rs  tool_call_info.rs
crates/observability/: Cargo.toml
crates/observability/src/: audit.rs  lib.rs  metrics.rs  tracer.rs
crates/peko-daemon/: Cargo.toml
crates/peko-daemon/src/: main.rs
crates/principal/: Cargo.toml
crates/principal/src/: agent_prompt.rs  capability_evaluator.rs  config.rs  extension_store.rs  lib.rs  peer.rs
crates/principal/src/runtime/: builtin_tools.rs  mod.rs
crates/principal/src/slash/: extension_row.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: ipc.rs  lib.rs
crates/provider-api/: Cargo.toml
crates/provider-api/src/: context_window_error.rs  credentials.rs  lib.rs  prompt_cache.rs  retryable_error.rs  traits.rs
crates/providers/: Cargo.toml
crates/providers/src/: catalog.rs  core.rs  factory.rs  lib.rs  metered.rs  mock.rs  provider_view.rs  resolver.rs  rotating_auth.rs  secret_store.rs  templates.rs  validator.rs
crates/providers/src/adapters/: anthropic.rs  compat.rs  mod.rs  openai.rs  openai_responses.rs
crates/providers/src/transport/: client.rs  retry.rs
crates/quota/: Cargo.toml
crates/quota/src/: config.rs  lib.rs  meter.rs  scope.rs  state.rs
crates/session/: Cargo.toml
crates/session/src/: context.rs  default_path_resolver.rs  directory.rs  events.rs  inbox_registry.rs  index.rs  jsonl.rs  key.rs  lib.rs  lock_utils.rs  maintenance.rs  manager.rs  message.rs  message_conversion.rs  metadata.rs  metadata_controller.rs  overlay.rs  recovery.rs  session_core.rs  session_core_impl.rs  session_info.rs  spawn.rs  subagent_key.rs  sync.rs  test_config.rs  todos.rs  types.rs  unified.rs
crates/session/src/compaction/: backend.rs  background.rs  compaction_top.rs  eviction.rs  factory.rs  integration_tests.rs  mod.rs  summary_format.rs  turn_boundaries.rs  types.rs
crates/subject/: Cargo.toml
crates/subject/src/: lib.rs  path_resolver.rs
crates/tools-builtin/: Cargo.toml
crates/tools-builtin/src/: lib.rs  paths.rs  tool_search_metadata.rs
crates/tools-builtin/src/async_control/: common.rs  list.rs  mod.rs  output.rs  (+3 more)
crates/tools-core/: Cargo.toml
crates/tools-core/src/: constants.rs  context_source.rs  exec.rs  interrupt.rs  lib.rs  traits.rs
gateway-interface/: Cargo.toml
gateway-interface/src/: error.rs  interface.rs  lib.rs  types.rs
gateways/: Cargo.toml
gateways/discord/: Cargo.toml  README.md  gateway.toml
gateways/discord/src/: lib.rs
gateways/src/: lib.rs
mcp-servers/mcp-browser/: Cargo.toml
mcp-servers/mcp-browser/src/: main.rs
mcp-servers/mcp-memory/: Cargo.toml
mcp-servers/mcp-memory/src/: main.rs
mcp-servers/mcp-web/: Cargo.toml
mcp-servers/mcp-web/src/: main.rs
sdks/python/peko_tool/: README.md  pyproject.toml
(+1693 files in other folders)
