[package]
name = "pekobot"
version = "0.1.0"
edition = "2021"
authors = ["Pekora <peko@coneko.ai>"]
description = "Lightweight multi-agent runtime with optional Coneko network"
license = "MIT"
repository = "https://github.com/coneko/pekobot"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client & server
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.5"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Crypto (ed25519)
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
blake3 = "1.5"
bs58 = "0.5"
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
scopeguard = "1.2"

# Async traits
async-trait = "0.1"
futures = "0.3"

# System calls (for daemon process management)
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
once_cell = "1.19"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Directories
dirs = "5.0"

# URL encoding
url = "2.5"
urlencoding = "2.1"

# Binary discovery
which = "6.0"

# Pattern matching for document parsing
regex = "1.10"
glob = "0.3"

# Portable agent dependencies
tar = "0.4"
flate2 = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
rpassword = "7.3"

# Secret manager dependencies
hkdf = "0.12"
keyring = "2.3"
secrecy = "0.10"

# File system watching (orchestration layer)
notify = "6.1"

# Image building
walkdir = "2.5"
tokio-stream = "0.1"

# Windows system calls
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
default = []
mcp = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "pekobot"
path = "src/main.rs"

[[bin]]
name = "peko"
path = "src/main.rs"
