[package]
name = "pekobot"
version = "0.1.0"
edition = "2021"
authors = ["Pekora <peko@coneko.ai>"]
description = "Lightweight multi-agent runtime with optional Coneko network"
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
# Async runtime
# `full` enables `net`, but listing `net` explicitly documents the
# dependency on `tokio::net::windows::named_pipe` (ADR-038).
tokio = { version = "1.35", features = ["full", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client (used by registry, MCP transport, providers, message tool)
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Crypto (ed25519)
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
blake3 = "1.5"
bs58 = "0.5"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
scopeguard = "1.2"

# Async traits
async-trait = "0.1"
futures = "0.3"

# System calls (for daemon process management)
libc = "0.2"

# Hostname detection
hostname = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
once_cell = "1.19"

# UUID
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# Directories
dirs = "5.0"

# URL encoding
url = "2.5"
urlencoding = "2.1"

# Binary discovery
which = "6.0"

# Pattern matching for document parsing
regex = "1.10"
glob = "0.3"

# Portable agent dependencies
tar = "0.4"
flate2 = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
rpassword = "7.3"

# Secret manager dependencies
hkdf = "0.12"
keyring = "2.3"
secrecy = "0.10"

# Image building
walkdir = "2.5"
tokio-stream = "0.1"

# WebSocket tunnel (ADR-035)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Windows system calls
# `Win32_System_Pipes`           : CreateNamedPipeW (ADR-038, named-pipe transport)
# `Win32_Security`               : SECURITY_DESCRIPTOR, SECURITY_ATTRIBUTES
# `Win32_Security_Authorization` : ConvertStringSecurityDescriptorToSecurityDescriptorW
# `Win32_Foundation`             : CloseHandle, GetLastError, LocalFree (already present)
# `Win32_System_Threading`, `Win32_System_JobObjects` : Job Objects (src/common/process/job_object.rs)
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
toml_edit = "0.25.12"

# JWT validation
jsonwebtoken = "9"

[features]
default = ["test-utils"]
# Expose internal modules for integration tests
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.0"
rsa = "0.9"


[[bin]]
name = "peko"
path = "src/main.rs"

# Integration tests under tests/scenarios/ are nested in a subdir
# (cargo's auto-discovery only picks up tests/*.rs directly). Each
# scenario file needs an explicit [[test]] entry — D1 lands first,
# D2-D4 add their own entries in their respective PRs.
[[test]]
name = "s1_local_agent_with_extensions"
path = "tests/scenarios/s1_local_agent_with_extensions.rs"

[[test]]
name = "s2_extension_registry_roundtrip"
path = "tests/scenarios/s2_extension_registry_roundtrip.rs"

[[test]]
name = "s3_agent_registry_roundtrip"
path = "tests/scenarios/s3_agent_registry_roundtrip.rs"

[[test]]
name = "s4_publish_running_agent_with_permission"
path = "tests/scenarios/s4_publish_running_agent_with_permission.rs"

[[test]]
name = "s5_live_permit_propagation"
path = "tests/scenarios/s5_live_permit_propagation.rs"

[[test]]
name = "s6_principal_grant_revoke_roundtrip"
path = "tests/scenarios/s6_principal_grant_revoke_roundtrip.rs"

[[test]]
name = "tunnel_security"
path = "tests/tunnel_security.rs"
