[workspace]
resolver = "2"
members = [".", "crates/auth", "crates/engine", "crates/events", "crates/extension-api", "crates/extension-host", "crates/chat-log", "crates/fs-persistence", "crates/identity", "crates/message", "crates/peko-daemon", "crates/provider-api", "crates/providers",
    "crates/protocol", "crates/quota", "crates/subject", "crates/tools-builtin", "crates/tools-core"]

# ---------------------------------------------------------------------------
# Cargo-shear intent block (Phase 0 of the post-migration cleanup).
#
# When `cargo-shear` is installed, it will use this block to surface any
# workspace-crate dep that has no remaining consumer in the crate where
# it is declared. During the 18-phase cleanup, dead deps are expected to
# appear as we migrate root-only domains into workspace crates; Phase 0
# only documents the intent, it does NOT install `cargo-shear` in CI yet
# (lint policy was explicitly deferred per the plan).
#
# To run locally once installed:
#   cargo install cargo-shear --locked
#   cargo shear --workspace
#
# Expected dead deps to surface over the cleanup:
#   - peko-protocol in root       (after Phase 12 lifts tunnel/ipc)
#   - peko-subject in root        (after Phase 15 deletes src/subject.rs)
#   - peko-quota in root          (after Phase 15 deletes src/quota/)
#   - peko-message in root        (after Phase 15 deletes common/types/message.rs)
#   - peko-tools-core in root     (after Phase 15 deletes src/tools/core/)
#   - peko-extension-host in root (after Phase 16 deletes *_compat.rs impls)
#   - peko-engine in root         (after Phase 17 moves agentic_loop tests)
# ---------------------------------------------------------------------------
[workspace.metadata.cargo-shear]

[package]
name = "peko"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai>"]
description = "Lightweight multi-agent runtime with optional Coneko network"
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
# Workspace member providing the agentic engine. Phase 9a extracted
# the pure-dependency files (chunker, event_processor, state,
# stream_buffer, stream_orchestrator, tool_stream, parallel_gate,
# error, events re-export). The remaining root-coupled files
# (agentic_loop, compaction_orchestrator, tool_executor, tool_runtime,
# async_completion, stream_types) stay in src/engine/ until Phase 9b
# lifts the agent / session / tools couplings.
peko-engine = { path = "crates/engine" }
# Workspace member providing the neutral agentic event contract. The root
# re-exports it through `engine::events` for compatibility.
peko-events = { path = "crates/events" }
# Workspace member providing the neutral message contract
# (`ContentBlock`, `LlmMessage`, `MessageRole`, `TokenUsage`, …). The
# root re-exports it through `common::types::message` so existing
# `peko::common::types::message::...` and `peko::providers::...` paths
# keep working unchanged.
peko-message = { path = "crates/message" }
# Workspace member providing the canonical actor type (`Subject`,
# `SubjectKind`, `PrincipalId`, `PrincipalDID`, `SubjectParseError`,
# `subject_from_string_with_default_user`). Pure value/type layer
# with no inbound edge from principal, agents, engine, daemon,
# providers, or extensions. The root re-exports it through
# `crate::subject` and `crate::auth` for backwards compatibility.
peko-subject = { path = "crates/subject" }
# Workspace member providing per-principal token quota (F18). Owns
# QuotaMeter, QuotaScope, QuotaState, QuotaConfig, QuotaError as one
# coherent domain. Depends on peko-message for TokenUsage; the root
# re-exports it through `crate::quota` for backwards compatibility.
peko-quota = { path = "crates/quota" }
# Workspace member providing the tool execution API (Tool trait,
# ToolContext, AbortSignal, ToolResult, ToolError, ToolInterruptNotice,
# ContextSource, ToolExposure — F34). The extension framework, the
# built-in tools, and the agentic loop all import from this crate;
# it depends on nothing except serde/anyhow/tokio. The root
# re-exports it through `crate::tools::core` for backwards
# compatibility.
peko-tools-core = { path = "crates/tools-core" }
# Workspace member providing concrete built-in tool implementations
# (Phase 10a ships filesystem tools; future Phase 10b+ commits will
# move the async/cron/session/skill/task/messaging tools). Depends on
# `peko-tools-core` for the `Tool` trait and external tokio/glob/regex.
peko-tools-builtin = { path = "crates/tools-builtin" }
# Workspace member providing the provider contract types
# (ChatOptions, ChatResponse, StreamEvent, ContentDelta, StopReason,
# BlockType, ToolDefinition, ContentBlockId, ThinkingEffort,
# ThinkingFormat, ThinkingKeep, ToolChoice, ServiceTier,
# ProviderCompat, DeferredToolsMode, CacheRetention). The
# concrete `Provider` impl, HTTP transport, adapters, and resolver
# moved into `peko-providers` in Phase 6; this crate now owns only
# the contract types. Depends on peko-message only; the root
# re-exports through `crate::providers::traits::*` (a transitional
# shim) for backwards compatibility — the shim is deleted in
# Phase 15.
peko-provider-api = { path = "crates/provider-api" }
# Workspace member providing the concrete LLM provider
# implementations (Phase 6) — owns the unified Provider core,
# HTTP transport, per-adapter request builders (OpenAI Chat
# Completions / OpenAI Responses / Anthropic Messages /
# OpenAI-compatible), the model catalog, templates, mock adapter,
# metered wrapper, validator, LlmResolver, RotationState, and the
# read-side `SecretStore` trait with `InMemorySecretStore` impl.
# Replaces root `src/providers/`; the historical
# `crate::providers::*` paths are intentionally broken.
peko-providers = { path = "crates/providers" }
# Workspace member providing the extension framework API contracts
# (Phase 7) — owns ExtensionId, HookId, HookInput/Output/Result,
# ExtensionManifest, Capability, Capabilities, ActiveExtensionSet,
# ToolMetadata, ToolSource, ToolRuntimeContext, AsyncReceipt,
# AsyncTaskStatus, MessageEnvelope, SessionSnapshot, PromptBuildState,
# ToolRegistryAccess, and the data parts of ReservedParamsConfig /
# ParamSource. The concrete framework host (registry, async executor,
# transport, store, manager, scaffold) stays in the root package —
# Phase 8 will move that into `peko-extension-host`. Depends on
# peko-message, peko-tools-core, peko-provider-api; the root
# re-exports through `crate::extensions::framework::types::*` for
# backwards compatibility.
peko-extension-api = { path = "crates/extension-api" }
# Workspace member providing the extension framework host
# implementation (Phase 8) — owns ExtensionCore, hook dispatch,
# capability gate, async executor, transport, manager/store, scaffold,
# skill catalog, integration, framework services, and the
# SimpleRegistry/SharedRegistry utilities. Depends only on
# peko-extension-api + peko-message + peko-tools-core + peko-provider-api
# + peko-subject. The root re-exports through
# `crate::extensions::framework::*` for backwards compatibility.
peko-extension-host = { path = "crates/extension-host" }
# Workspace member providing the IPC + tunnel wire-shape contracts
# (Phase 11a) — owns the auth envelope (`AuthCredential`,
# `PrincipalSendControlMode`, `AuthHeader`) and the shared packet/timeout
# constants. The bulk of the wire protocol (`RequestPacket`,
# `ResponsePacket`, `TunnelMessage`, instance payloads) stays in root
# until the wider Phase 11 boundary lifts them.
peko-protocol = { path = "crates/protocol" }
# Workspace member providing the DID identity + key storage + runtime
# identity domain (Phase 3) — owns Identity / DIDDocument / KeyPair /
# KeyStorage / KeychainStorage / EncryptedKeyStorage /
# RuntimeIdentity / RuntimeMetadata / DidResolver / public_key_to_did_key.
# Depends only on peko-subject; root implements the
# `RuntimePaths` / `IdentityVault` / `IdentityDataDir` trait ports
# defined in `peko-identity::host` so peko-identity stays a leaf crate.
# The root re-exports are removed entirely in Phase 15.
peko-identity = { path = "crates/identity" }
# Workspace member providing append-only file-persistence utilities
# (Phase 5) — owns FileLock / LockManager / append_bytes_durable and the
# associated timeout constants. Depends on nothing except serde / tokio
# / libc; root depends on it for `src/session/{jsonl,todos,index}.rs`
# until Phase 7 lifts those into `peko-session`. The
# `src/common/persistence/` + `src/session/lock.rs` shims are removed
# in Phase 5.
peko-fs-persistence = { path = "crates/fs-persistence" }
# Workspace member providing append-only runtime-owned chat log
# storage (Phase 5) — owns ChatLogStore / ChatLogMessage /
# ChatLogPage / ChatThreadKey / cursor codec. No runtime deps on
# session/agent/daemon. The root `src/chat_log/` directory is deleted
# in Phase 5 (historical `peko::chat_log::*` paths are intentionally
# broken).
peko-chat-log = { path = "crates/chat-log" }
# Workspace member providing authentication/authorization (Phase 4 of
# the post-migration cleanup). Owns the canonical auth domain:
# ApiKey/ApiKeyStore, CallerContext, JwtValidator, RateLimiter,
# Permission, Resource, Action, AuthError, plus the `Exposure` enum
# lifted from principal/config. Depends only on `peko-subject`; root
# implements the `RuntimePaths` / `PrincipalResourceView` trait ports
# defined in `peko-auth::host` so `peko-auth` stays a leaf crate.
peko-auth = { path = "crates/auth" }
# Async runtime
# `full` enables `net`, but listing `net` explicitly documents the
# dependency on `tokio::net::windows::named_pipe` (ADR-038).
tokio = { version = "1.35", features = ["full", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client (used by registry, MCP transport, providers, message tool)
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Crypto (ed25519)
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
blake3 = "1.5"
bs58 = "0.5"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
scopeguard = "1.2"

# Async traits
async-trait = "0.1"
futures = "0.3"

# System calls (for daemon process management)
libc = "0.2"

# Hostname detection
hostname = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
once_cell = "1.19"

# UUID
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# Directories
dirs = "5.0"

# URL encoding
url = "2.5"
urlencoding = "2.1"

# Binary discovery
which = "6.0"

# Pattern matching for document parsing
regex = "1.10"
glob = "0.3"

# Portable agent dependencies
tar = "0.4"
flate2 = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
rpassword = "7.3"

# Secret manager dependencies
hkdf = "0.12"
keyring = "2.3"
secrecy = { version = "0.10", features = ["serde"] }

# Image building
walkdir = "2.5"
tokio-stream = "0.1"

# WebSocket tunnel (ADR-035)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustls = "0.22"
rustls-pemfile = "1"
tokio-rustls = "0.25"
webpki-roots = "0.26"

# Windows system calls
# `Win32_System_Pipes`           : CreateNamedPipeW (ADR-038, named-pipe transport)
# `Win32_Security`               : SECURITY_DESCRIPTOR, SECURITY_ATTRIBUTES
# `Win32_Security_Authorization` : ConvertStringSecurityDescriptorToSecurityDescriptorW
# `Win32_Foundation`             : CloseHandle, GetLastError, LocalFree (already present)
# `Win32_System_Threading`, `Win32_System_JobObjects` : Job Objects (src/common/process/job_object.rs)
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
toml_edit = "0.25.12"

# JWT validation
jsonwebtoken = "9"

# JSON-Schema validator for tool argument validation (F32b).
# `default-features = false` skips `resolve-http` + `tls-aws-lc-rs`
# (deps on reqwest + rustls) — neither is needed for in-process
# evaluation of the static schemas tools declare via
# `Tool::parameters() -> Value`.
jsonschema = { version = "0.48", default-features = false }

[features]
# `test-utils` is intentionally NOT in `default`: it exposes resolver/hub-directory
# test hooks that must not ship in the production binary. Tests that need
# internal access opt in explicitly, e.g.
#   cargo test --lib --features test-utils daemon::e2e_tests
default = []
# Expose internal modules for integration tests
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
serial_test = "3.0"
rsa = "0.9"


[[bin]]
name = "peko"
path = "src/main.rs"

# Integration tests under tests/scenarios/ are nested in a subdir
# (cargo's auto-discovery only picks up tests/*.rs directly). Each
# scenario file needs an explicit [[test]] entry — D1 lands first,
# D2-D4 add their own entries in their respective PRs.
[[test]]
name = "s1_local_agent_with_extensions"
path = "tests/scenarios/s1_local_agent_with_extensions.rs"

[[test]]
name = "s2_extension_registry_roundtrip"
path = "tests/scenarios/s2_extension_registry_roundtrip.rs"

[[test]]
name = "s4_publish_running_agent_with_permission"
path = "tests/scenarios/s4_publish_running_agent_with_permission.rs"

[[test]]
name = "s5_live_permit_propagation"
path = "tests/scenarios/s5_live_permit_propagation.rs"

[[test]]
name = "s6_principal_grant_revoke_roundtrip"
path = "tests/scenarios/s6_principal_grant_revoke_roundtrip.rs"

[[test]]
name = "tunnel_security"
path = "tests/tunnel_security.rs"

[[test]]
name = "direct_connection"
path = "tests/direct_connection.rs"

[[test]]
name = "direct_transport_policy"
path = "tests/direct_transport_policy.rs"

# Core tool parity harness for the Claude Code built-in tool surface.
[[test]]
name = "core_tools"
path = "tests/core_tools.rs"
