[package]
name = "gateway-interface"
version = "0.1.0"
edition = "2021"
authors = ["Pekora <peko@coneko.ai>"]
description = "Shared interface definitions for Pekobot gateway plugins"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
