[package]
name = "gateway-bundle"
version = "0.1.0"
edition = "2021"
authors = ["Pekora <peko@coneko.ai>"]
description = "Gateway plugins for Pekobot messaging platforms"
license = "MIT"
repository = "https://github.com/coneko/gateway-bundle"

[workspace]
members = [
    "discord",
    # "whatsapp",
    # "telegram",
    # "slack",
    # "signal",
    # "irc",
    # "googlechat",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Pekobot gateway interface (path dependency during development)
# In production, this would be a published crate
pekobot-gateway = { path = "../pekobot/src/gateway" }
