[package]
name = "peko-engine"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai>"]
description = "Peko agentic engine (Phase 9a + 9b.N.1) — owns the pure-dependency loops moved out of src/engine/: chunker, event_processor, state, stream_buffer, stream_orchestrator, tool_stream, parallel_gate, the AgenticError taxonomy, the events re-export, stream_types (Phase 9b.1), and the async_completion message synthesizer (Phase 9b.N.1). Phase 9b.N.1 introduced peko-extension-api + peko-extension-host deps for the AsyncTaskStatus + CompletionEvent types used by async_completion::build_async_completion_message. The remaining root-coupled files (agentic_loop, compaction_orchestrator, tool_executor, tool_runtime) stay in src/engine/ until later Phase 9b commits lift the agent/session/builtin-tools couplings."
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
# Crate hierarchy: peko-engine sits between the extension host (which it
# coordinates with via LifecyclePhase / AgenticEvent) and the provider
# API (it consumes StreamEvent / StopReason). peko-message is the
# shared content-type crate; peko-tools-core provides the Tool trait
# used by parallel_gate tests; peko-quota provides QuotaError used by
# error.rs; peko-events is the neutral AgenticEvent / LifecyclePhase
# definitions.
#
# Phase 9b.N.1 added peko-extension-api + peko-extension-host as
# direct deps — async_completion uses both `AsyncTaskStatus` (API
# crate, used by HookOutput::TaskStatus) and `CompletionEvent` (host
# crate inbox.rs). Adding the API+host deps does NOT create a cycle:
# `peko-extension-host` depends on `peko-extension-api`, `peko-message`,
# `peko-tools-core`, `peko-provider-api`, and `peko-subject` — none of
# which depend on `peko-engine`. This matches the target dependency
# graph in the workspace migration plan (peko-engine is downstream of
# peko-extension-host).
peko-message = { path = "../message" }
peko-provider-api = { path = "../provider-api" }
peko-tools-core = { path = "../tools-core" }
peko-quota = { path = "../quota" }
peko-events = { path = "../events" }
peko-extension-api = { path = "../extension-api" }
peko-extension-host = { path = "../extension-host" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# `chrono` is used by error.rs tests (window_end timestamp comparisons).
chrono = { version = "0.4", features = ["serde"] }
# `uuid` is used by execution.rs::TaskId::new().
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
