[package]
name = "peko-extension-api"
version = "0.1.0"
edition = "2021"
description = "Extension framework API contracts (Phase 7) — owns ExtensionId, HookId, HookInput/Output/Result, ExtensionManifest, Capability, Capabilities, ActiveExtensionSet, ToolMetadata, ToolSource, ToolRuntimeContext, AsyncReceipt, AsyncTaskStatus, MessageEnvelope, SessionSnapshot, PromptBuildState, ToolRegistryAccess, and the data parts of ReservedParamsConfig / ParamSource. Re-exports ContentBlock / LlmMessage / MessageRole / TokenUsage from peko-message, ToolDefinition / ThinkingEffort / ServiceTier from peko-provider-api, and ToolExposure / ToolResult from peko-tools-core."

[dependencies]
peko-message = { path = "../message" }
peko-tools-core = { path = "../tools-core" }
peko-provider-api = { path = "../provider-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["sync"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
